feat: Fine rune yarn bundlewatch

--- a/package.json
+++ b/package.json
@@ -72,7 +72,31 @@
     "files": [
       {
         "path": "build/public/static/js/*.js",
-        "maxSize": "700kB"
+        "maxSize": "50kB"
+      },
+      {
+        "path": "build/public/static/js/ChartEditor*.js",
+        "maxSize": "530kB"
+      },
+      {
+        "path": "build/public/static/js/d3*.js",
+        "maxSize": "103kB"
+      },
+      {
+        "path": "build/public/static/js/draft-js*.js",
+        "maxSize": "120kB"
+      },
+      {
+        "path": "build/public/static/js/jsoneditor*.js",
+        "maxSize": "270kB"
+      },
+      {
+        "path": "build/public/static/js/react-sortable*.js",
+        "maxSize": "70kB"
+      },
+      {
+        "path": "build/public/static/js/citation*.js",
+        "maxSize": "370kB"
       },
       {
         "path": "build/public/static/js/react-plotly*.js",
@@ -84,7 +108,7 @@
       },
       {
         "path": "build/public/static/js/client*.js",
-        "maxSize": "1.4MB"
+        "maxSize": "1.2MB"
       }
     ]
   },
