Fix: sanitize-html bundlewatch - See https://github.com/eea/volto-datablocks/pull/116/files

--- a/.bundlewatch.config.json
+++ b/.bundlewatch.config.json
@@ -5,6 +5,10 @@
         "maxSize": "50kB"
       },
       {
+        "path": "build/public/static/js/sanitize-*.js",
+        "maxSize": "85kB"
+      },
+      {
         "path": "build/public/static/js/ChartEditor*.js",
         "maxSize": "530kB"
       },
