Refs #273385 - add flourish to package

--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "@eeacms/volto-datablocks",
     "@eeacms/volto-plotlycharts",
     "@eeacms/volto-eea-map",
+    "@eeacms/volto-flourish",
     "@eeacms/volto-tableau",
     "@eeacms/volto-block-data-figure",
     "@eeacms/volto-redmine-helpdesk",
@@ -212,6 +213,7 @@
     "@eeacms/volto-eea-website-theme": "2.1.5",
     "@eeacms/volto-embed": "10.0.3",
     "@eeacms/volto-embed-static-content": "0.2.4",
+    "@eeacms/volto-flourish": "*",
     "@eeacms/volto-globalsearch": "2.0.0",
     "@eeacms/volto-plotlycharts": "10.0.5",
     "@eeacms/volto-redmine-helpdesk": "1.0.0",
