--- a/package.json
+++ b/package.json
@@ -170,6 +170,7 @@
   },
   "resolutions": {
     "@elastic/search-ui": "1.21.2",
+    "@eeacms/volto-chatbot": "0.1.6",
     "@eeacms/volto-embed": "10.1.0",
     "@eeacms/volto-embed-static-content": "0.3.1",
     "@eeacms/volto-datablocks": "7.2.4",
@@ -200,6 +201,7 @@
   },
   "dependencies": {
     "@eeacms/volto-block-data-figure": "8.1.3",
+    "@eeacms/volto-chatbot": "0.1.6",
     "@eeacms/volto-citation": "1.1.0",
     "@eeacms/volto-datablocks": "7.2.4",
     "@eeacms/volto-datahub": "2.0.1",
