--- a/.bundlewatch.config.json
+++ b/.bundlewatch.config.json
@@ -42,7 +42,11 @@
       },
       {
         "path": "build/public/static/js/client*.js",
-        "maxSize": "1.25MB"
+        "maxSize": "1.3MB"
+      },
+      {
+        "path": "build/public/static/js/rehype-prism-plus*.js",
+        "maxSize": "250kB"
       }
     ]
 }
