--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
     "@eeacms/volto-searchlib",
     "@eeacms/volto-globalsearch",
     "@eeacms/volto-datahub",
+    "@eeacms/volto-eea-versions",
     "@eeacms/volto-eea-design-system",
     "@eeacms/volto-eea-website-theme",
     "@eeacms/volto-eea-website-policy",
