--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "eea-website-frontend",
   "description": "EEA Main Website frontend (Plone 6)",
   "license": "MIT",
-  "version": "2.17.0",
+  "version": "2.18.0",
   "scripts": {
     "start": "razzle start",
     "postinstall": "make omelette && make patches",
@@ -180,6 +180,7 @@
     "@eeacms/volto-eea-design-system": "1.36.1",
     "@eeacms/volto-eea-kitkat": "26.4.0",
     "@eeacms/volto-eea-map": "5.0.7",
+    "@eeacms/volto-eea-versions": "1.0.0",
     "@eeacms/volto-eea-website-policy": "2.3.0",
     "@eeacms/volto-eea-website-theme": "3.5.0",
     "@eeacms/volto-globalsearch": "2.0.2",
@@ -211,6 +212,7 @@
     "@eeacms/volto-eea-design-system": "1.36.1",
     "@eeacms/volto-eea-kitkat": "26.4.0",
     "@eeacms/volto-eea-map": "5.0.7",
+    "@eeacms/volto-eea-versions": "1.0.0",
     "@eeacms/volto-eea-website-policy": "2.3.0",
     "@eeacms/volto-eea-website-theme": "3.5.0",
     "@eeacms/volto-embed": "10.1.2",
