--- a/package.json
+++ b/package.json
@@ -68,6 +68,7 @@
     "@eeacms/volto-eea-website-policy",
     "@plone-collective/volto-authomatic",
     "@eeacms/volto-citation",
+    "@eeacms/volto-flourish",
     "volto-subsites"
   ],
   "jest": {
@@ -194,6 +195,7 @@
     "@eeacms/volto-citation": "1.1.0",
     "@plone-collective/volto-authomatic": "2.0.1",
     "@eeacms/volto-description-block": "2.2.1",
+    "@eeacms/volto-flourish": "0.1.2",
     "volto-subsites": "4.0.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
@@ -223,6 +225,7 @@
     "@eeacms/volto-redmine-helpdesk": "1.0.0",
     "@eeacms/volto-searchlib": "2.0.6",
     "@eeacms/volto-tableau": "8.1.3",
+    "@eeacms/volto-flourish": "0.1.2",
     "@eeacms/volto-workflow-progress": "5.0.0",
     "@plone-collective/volto-authomatic": "2.0.1",
     "@plone/volto": "17.20.4",
