--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "eea-website-frontend",
   "description": "EEA Main Website frontend (Plone 6)",
   "license": "MIT",
-  "version": "2.25.0",
+  "version": "2.25.0-beta.1",
   "scripts": {
     "start": "razzle start",
     "postinstall": "make omelette && make patches",
@@ -185,7 +185,7 @@
     "@eeacms/volto-eea-website-policy": "2.4.0",
     "@eeacms/volto-eea-website-theme": "3.5.4",
     "@eeacms/volto-globalsearch": "2.0.8",
-    "@eeacms/volto-plotlycharts": "11.0.1",
+    "@eeacms/volto-plotlycharts": "github:eea/volto-plotlycharts#12.x.x",
     "@eeacms/volto-redmine-helpdesk": "1.0.0",
     "@eeacms/volto-searchlib": "2.0.12",
     "@eeacms/volto-tableau": "8.1.3",
@@ -199,7 +199,7 @@
     "volto-subsites": "4.0.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
-    "react-colorscales": "github:eea/react-colorscales#1.0.2",
+    "react-colorscales": "github:eea/react-colorscales#2.0.2",
     "d3-array": "^2.12.1",
     "react-error-overlay": "6.0.9",
     "eslint-plugin-jsx-a11y": "6.7.1"
@@ -222,13 +222,14 @@
     "@eeacms/volto-embed-static-content": "0.4.0",
     "@eeacms/volto-flourish": "0.1.6",
     "@eeacms/volto-globalsearch": "2.0.8",
-    "@eeacms/volto-plotlycharts": "11.0.1",
+    "@eeacms/volto-plotlycharts": "github:eea/volto-plotlycharts#12.x.x",
     "@eeacms/volto-redmine-helpdesk": "1.0.0",
     "@eeacms/volto-searchlib": "2.0.12",
     "@eeacms/volto-tableau": "8.1.3",
     "@eeacms/volto-workflow-progress": "5.0.0",
     "@plone-collective/volto-authomatic": "2.0.1",
     "@plone/volto": "17.21.0",
+    "react-chart-editor": "github:eea/react-chart-editor#0.46.2",
     "volto-subsites": "4.0.0"
   },
   "devDependencies": {
