--- a/package.json
+++ b/package.json
@@ -200,6 +200,7 @@
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-colorscales": "github:eea/react-colorscales#2.0.2",
+    "moment": "<=2.29.4",
     "d3-array": "^2.12.1",
     "react-error-overlay": "6.0.9",
     "eslint-plugin-jsx-a11y": "6.7.1"
