--- a/package.json
+++ b/package.json
@@ -174,9 +174,9 @@
   "resolutions": {
     "@elastic/search-ui": "1.21.2",
     "@eeacms/volto-embed": "10.1.3",
-    "@eeacms/volto-embed-content": "0.2.1",
+    "@eeacms/volto-embed-content": "github:eea/volto-embed-content#develop",
     "@eeacms/volto-embed-static-content": "0.5.1",
-    "@eeacms/volto-datablocks": "7.2.9",
+    "@eeacms/volto-datablocks": "github:eea/volto-datablocks#develop",
     "@eeacms/volto-datahub": "2.0.1",
     "@eeacms/volto-eea-design-system": "1.36.3",
     "@eeacms/volto-eea-kitkat": "26.4.4",
@@ -185,6 +185,7 @@
     "@eeacms/volto-eea-website-policy": "2.4.0",
     "@eeacms/volto-eea-website-theme": "3.5.4",
     "@eeacms/volto-globalsearch": "2.0.9",
+    "@eeacms/volto-metadata-block": "github:eea/volto-metadata-block#develop",
     "@eeacms/volto-plotlycharts": "github:eea/volto-plotlycharts#12.x.x",
     "@eeacms/volto-redmine-helpdesk": "1.0.0",
     "@eeacms/volto-searchlib": "2.0.13",
@@ -208,7 +209,7 @@
   "dependencies": {
     "@eeacms/volto-block-data-figure": "8.2.1",
     "@eeacms/volto-citation": "1.1.0",
-    "@eeacms/volto-datablocks": "7.2.9",
+    "@eeacms/volto-datablocks": "github:eea/volto-datablocks#develop",
     "@eeacms/volto-datahub": "2.0.1",
     "@eeacms/volto-description-block": "2.2.3",
     "@eeacms/volto-editing-progress": "1.0.0",
@@ -219,10 +220,11 @@
     "@eeacms/volto-eea-website-policy": "2.4.0",
     "@eeacms/volto-eea-website-theme": "3.5.4",
     "@eeacms/volto-embed": "10.1.3",
-    "@eeacms/volto-embed-content": "0.2.1",
+    "@eeacms/volto-embed-content": "github:eea/volto-embed-content#develop",
     "@eeacms/volto-embed-static-content": "0.5.1",
     "@eeacms/volto-flourish": "0.1.6",
     "@eeacms/volto-globalsearch": "2.0.9",
+    "@eeacms/volto-metadata-block": "github:eea/volto-metadata-block#develop",
     "@eeacms/volto-plotlycharts": "github:eea/volto-plotlycharts#12.x.x",
     "@eeacms/volto-redmine-helpdesk": "1.0.0",
     "@eeacms/volto-searchlib": "2.0.13",
