--- a/package.json
+++ b/package.json
@@ -185,6 +185,7 @@
     "@eeacms/volto-eea-website-policy": "2.4.0",
     "@eeacms/volto-eea-website-theme": "3.5.4",
     "@eeacms/volto-globalsearch": "2.0.9",
+    "@eeacms/volto-listing-block": "github:eea/volto-listing-block#279420_viz_charts",
     "@eeacms/volto-metadata-block": "github:eea/volto-metadata-block#develop",
     "@eeacms/volto-plotlycharts": "github:eea/volto-plotlycharts#12.x.x",
     "@eeacms/volto-redmine-helpdesk": "1.0.0",
@@ -224,6 +225,7 @@
     "@eeacms/volto-embed-static-content": "0.5.1",
     "@eeacms/volto-flourish": "0.1.6",
     "@eeacms/volto-globalsearch": "2.0.9",
+    "@eeacms/volto-listing-block": "github:eea/volto-listing-block#279420_viz_charts",
     "@eeacms/volto-metadata-block": "github:eea/volto-metadata-block#develop",
     "@eeacms/volto-plotlycharts": "github:eea/volto-plotlycharts#12.x.x",
     "@eeacms/volto-redmine-helpdesk": "1.0.0",
