--- a/package.json
+++ b/package.json
@@ -183,7 +183,7 @@
     "@eeacms/volto-eea-map": "5.0.8",
     "@eeacms/volto-eea-versions": "1.0.1",
     "@eeacms/volto-eea-website-policy": "2.4.0",
-    "@eeacms/volto-eea-website-theme": "3.5.4",
+    "@eeacms/volto-eea-website-theme": "github:eea/volto-eea-website-theme#fix-plotly-history",
     "@eeacms/volto-globalsearch": "2.0.9",
     "@eeacms/volto-listing-block": "github:eea/volto-listing-block#279420_viz_charts",
     "@eeacms/volto-metadata-block": "github:eea/volto-metadata-block#develop",
@@ -219,7 +219,7 @@
     "@eeacms/volto-eea-map": "5.0.8",
     "@eeacms/volto-eea-versions": "1.0.1",
     "@eeacms/volto-eea-website-policy": "2.4.0",
-    "@eeacms/volto-eea-website-theme": "3.5.4",
+    "@eeacms/volto-eea-website-theme": "github:eea/volto-eea-website-theme#fix-plotly-history",
     "@eeacms/volto-embed": "10.1.3",
     "@eeacms/volto-embed-content": "github:eea/volto-embed-content#develop",
     "@eeacms/volto-embed-static-content": "0.5.1",
