--- a/package.json
+++ b/package.json
@@ -184,7 +184,7 @@
     "@eeacms/volto-eea-map": "5.0.8",
     "@eeacms/volto-eea-versions": "1.0.1",
     "@eeacms/volto-eea-website-policy": "2.4.0",
-    "@eeacms/volto-eea-website-theme": "github:eea/volto-eea-website-theme#fix-plotly-history",
+    "@eeacms/volto-eea-website-theme": "3.5.5",
     "@eeacms/volto-listing-block": "github:eea/volto-listing-block#279420_viz_charts",
     "@eeacms/volto-plotlycharts": "github:eea/volto-plotlycharts#12.x.x",
     "@eeacms/volto-globalsearch": "2.0.11",
@@ -219,7 +219,7 @@
     "@eeacms/volto-eea-map": "5.0.8",
     "@eeacms/volto-eea-versions": "1.0.1",
     "@eeacms/volto-eea-website-policy": "2.4.0",
-    "@eeacms/volto-eea-website-theme": "github:eea/volto-eea-website-theme#fix-plotly-history",
+    "@eeacms/volto-eea-website-theme": "3.5.5",
     "@eeacms/volto-embed": "10.1.3",
     "@eeacms/volto-embed-content": "0.2.2",
     "@eeacms/volto-embed-static-content": "0.5.1",
