pin flourish to custom branch

--- a/package.json
+++ b/package.json
@@ -197,7 +197,7 @@
     "@plone-collective/volto-authomatic": "2.0.1",
     "@plone-collective/volto-rss-provider": "1.0.1",
     "@eeacms/volto-description-block": "2.2.3",
-    "@eeacms/volto-flourish": "0.1.6",
+    "@eeacms/volto-flourish": "github:eea/volto-flourish#fix-flourish-url-prod",
     "@eeacms/volto-listing-block": "8.1.5",
     "volto-subsites": "4.0.0",
     "react": "17.0.2",
@@ -223,7 +223,7 @@
     "@eeacms/volto-embed": "10.1.3",
     "@eeacms/volto-embed-content": "0.2.2",
     "@eeacms/volto-embed-static-content": "0.5.1",
-    "@eeacms/volto-flourish": "0.1.6",
+    "@eeacms/volto-flourish": "github:eea/volto-flourish#fix-flourish-url-prod",
     "@eeacms/volto-globalsearch": "2.1.2",
     "@eeacms/volto-plotlycharts": "13.0.0",
     "@eeacms/volto-redmine-helpdesk": "1.0.0",
