--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "eea-website-frontend",
   "description": "EEA Main Website frontend (Plone 6)",
   "license": "MIT",
-  "version": "2.34.2-beta.1",
+  "version": "2.35.1-beta.0",
   "scripts": {
     "start": "razzle start",
     "postinstall": "make omelette && make patches",
@@ -197,7 +197,7 @@
     "@plone-collective/volto-authomatic": "2.0.1",
     "@plone-collective/volto-rss-provider": "1.0.1",
     "@eeacms/volto-description-block": "2.2.3",
-    "@eeacms/volto-flourish": "github:eea/volto-flourish#fix-flourish-url-prod",
+    "@eeacms/volto-flourish": "github:eea/volto-flourish#b6ec771c2e34c9b7e17a7494f8d1c421653de85d",
     "@eeacms/volto-listing-block": "8.1.5",
     "volto-subsites": "4.0.0",
     "react": "17.0.2",
@@ -223,7 +223,7 @@
     "@eeacms/volto-embed": "10.1.3",
     "@eeacms/volto-embed-content": "0.2.2",
     "@eeacms/volto-embed-static-content": "0.5.1",
-    "@eeacms/volto-flourish": "github:eea/volto-flourish#fix-flourish-url-prod",
+    "@eeacms/volto-flourish": "github:eea/volto-flourish#b6ec771c2e34c9b7e17a7494f8d1c421653de85d",
     "@eeacms/volto-globalsearch": "2.1.2",
     "@eeacms/volto-plotlycharts": "13.0.0",
     "@eeacms/volto-redmine-helpdesk": "1.0.0",
