--- a/package.json
+++ b/package.json
@@ -173,6 +173,10 @@
     "node": "^18 || ^20"
   },
   "resolutions": {
+    "@eeacms/volto-object-widget": "7.0.0",
+    "@eeacms/volto-block-style": "7.2.1",
+    "@eeacms/volto-listing-block": "8.1.5",
+    "@eeacms/volto-block-toc": "7.0.0",
     "@elastic/search-ui": "1.21.2",
     "@eeacms/volto-embed": "10.1.3",
     "@eeacms/volto-embed-content": "0.2.2",
