--- a/package.json
+++ b/package.json
@@ -179,6 +179,7 @@
     "@eeacms/volto-embed-static-content": "0.5.1",
     "@eeacms/volto-datablocks": "7.3.3",
     "@eeacms/volto-datahub": "2.0.1",
+    "@eeacms/volto-design-tokens": "1.1.0",
     "@eeacms/volto-eea-design-system": "1.39.0",
     "@eeacms/volto-eea-kitkat": "28.0.5",
     "@eeacms/volto-eea-map": "5.0.8",
@@ -212,6 +213,7 @@
     "@eeacms/volto-datablocks": "7.3.3",
     "@eeacms/volto-datahub": "2.0.1",
     "@eeacms/volto-description-block": "2.2.3",
+    "@eeacms/volto-design-tokens": "1.1.0",
     "@eeacms/volto-editing-progress": "1.0.0",
     "@eeacms/volto-eea-design-system": "1.39.0",
     "@eeacms/volto-eea-kitkat": "28.0.5",
