--- a/package.json
+++ b/package.json
@@ -195,7 +195,7 @@
     "@eeacms/volto-block-data-figure": "8.2.1",
     "@eeacms/volto-editing-progress": "1.0.0",
     "@eeacms/volto-citation": "1.1.0",
-    "@plone-collective/volto-authomatic": "2.0.1",
+    "@plone-collective/volto-authomatic": "github:collective/volto-authomatic#remove-local-storage-for-anonymous",
     "@plone-collective/volto-rss-provider": "1.0.1",
     "@eeacms/volto-description-block": "2.2.3",
     "@eeacms/volto-flourish": "0.1.6",
@@ -231,7 +231,7 @@
     "@eeacms/volto-searchlib": "2.1.10",
     "@eeacms/volto-tableau": "8.1.5",
     "@eeacms/volto-workflow-progress": "5.0.1",
-    "@plone-collective/volto-authomatic": "2.0.1",
+    "@plone-collective/volto-authomatic": "github:collective/volto-authomatic#remove-local-storage-for-anonymous",
     "@plone-collective/volto-rss-provider": "1.0.1",
     "@plone/volto": "17.22.1",
     "volto-subsites": "4.0.0"
