--- a/package.json
+++ b/package.json
@@ -205,7 +205,8 @@
     "react-colorscales": "github:eea/react-colorscales#1.0.2",
     "d3-array": "^2.12.1",
     "react-error-overlay": "6.0.9",
-    "eslint-plugin-jsx-a11y": "6.7.1"
+    "eslint-plugin-jsx-a11y": "6.7.1",
+    "react-dev-utils/loader-utils": "2.0.4"
   },
   "dependencies": {
     "@eeacms/volto-block-data-figure": "8.2.1",
