Revert "Revert "Beta release for authomatic and sentry""
This reverts commit fdbf00b268f1973f929f1a7d033cce411d5e2cdb.

--- a/package.json
+++ b/package.json
@@ -185,7 +185,7 @@
     "@eeacms/volto-eea-map": "5.0.8",
     "@eeacms/volto-eea-versions": "1.0.1",
     "@eeacms/volto-eea-website-policy": "2.6.0",
-    "@eeacms/volto-eea-website-theme": "3.11.0",
+    "@eeacms/volto-eea-website-theme": "github:eea/volto-eea-website-theme#289423-localstorage",
     "@eeacms/volto-globalsearch": "2.1.2",
     "@eeacms/volto-plotlycharts": "13.1.2",
     "@eeacms/volto-redmine-helpdesk": "1.0.0",
@@ -197,6 +197,7 @@
     "@eeacms/volto-citation": "1.1.0",
     "@plone-collective/volto-authomatic": "2.0.1",
     "@plone-collective/volto-rss-provider": "1.0.1",
+    "@plone-collective/volto-sentry": "github:collective/volto-sentry#enhance-ssr",
     "@eeacms/volto-description-block": "2.2.3",
     "@eeacms/volto-flourish": "0.1.6",
     "volto-subsites": "4.0.0",
@@ -220,7 +221,8 @@
     "@eeacms/volto-eea-map": "5.0.8",
     "@eeacms/volto-eea-versions": "1.0.1",
     "@eeacms/volto-eea-website-policy": "2.6.0",
-    "@eeacms/volto-eea-website-theme": "3.11.0",
+    "@eeacms/volto-eea-website-theme": "github:eea/volto-eea-website-theme#289423-localstorage",
+    "@plone-collective/volto-sentry": "github:collective/volto-sentry#enhance-ssr",
     "@eeacms/volto-embed": "10.1.3",
     "@eeacms/volto-embed-content": "0.2.2",
     "@eeacms/volto-embed-static-content": "0.5.1",
