--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "eea-website-frontend",
   "description": "EEA Main Website frontend (Plone 6)",
   "license": "MIT",
-  "version": "2.49.0",
+  "version": "2.49.1-beta.1",
   "scripts": {
     "start": "razzle start",
     "postinstall": "make omelette && make patches",
@@ -222,7 +222,6 @@
     "@eeacms/volto-eea-versions": "1.0.1",
     "@eeacms/volto-eea-website-policy": "2.6.0",
     "@eeacms/volto-eea-website-theme": "github:eea/volto-eea-website-theme#289423-localstorage",
-    "@plone-collective/volto-sentry": "github:collective/volto-sentry#enhance-ssr",
     "@eeacms/volto-embed": "10.1.3",
     "@eeacms/volto-embed-content": "0.2.2",
     "@eeacms/volto-embed-static-content": "0.5.1",
@@ -235,6 +234,7 @@
     "@eeacms/volto-workflow-progress": "5.0.1",
     "@plone-collective/volto-authomatic": "2.0.1",
     "@plone-collective/volto-rss-provider": "1.0.1",
+    "@plone-collective/volto-sentry": "github:collective/volto-sentry#enhance-ssr",
     "@plone/volto": "17.22.2",
     "volto-subsites": "4.0.0"
   },
