--- a/package.json
+++ b/package.json
@@ -206,16 +206,15 @@
     "d3-array": "^2.12.1",
     "react-error-overlay": "6.0.9",
     "eslint-plugin-jsx-a11y": "6.7.1",
-    "react-dev-utils/loader-utils": "2.0.4",
-    "react-dev-utils/immer": "9.0.6",
-    "webpack-bundle-analyzer": "4.9.1",
     "shell-quote": "1.7.3",
     "request/form-data": "2.5.4",
     "@plone/scripts/execa": "2.0.0",
-    "sane/execa": "2.0.0"
+    "sane/execa": "2.0.0",
+    "react-dev-utils": "^12",
+    "webpack-bundle-analyzer": "4.9.1"
   },
   "resolutions-comments": {
-    "react-dev-utils/**": "Fixes the security vulnerabilities in packages used by react-dev-utils",
+    "react-dev-utils": "Fixes the security vulnerabilities in packages used by react-dev-utils",
     "@plone/scripts/execa": "Fixes the security vulnerability, see https://github.com/sindresorhus/execa/releases/tag/v2.0.0"
   },
   "dependencies": {
@@ -244,7 +243,7 @@
     "@eeacms/volto-workflow-progress": "5.0.1",
     "@plone-collective/volto-authomatic": "2.0.1",
     "@plone-collective/volto-rss-provider": "1.0.1",
-    "@plone/volto": "17.22.1",
+    "@plone/volto": "17.22.3",
     "volto-subsites": "4.0.0"
   },
   "devDependencies": {
