fix: eslint-plugin-react-hooks

--- a/package.json
+++ b/package.json
@@ -206,6 +206,7 @@
     "d3-array": "^2.12.1",
     "react-error-overlay": "6.0.9",
     "eslint-plugin-jsx-a11y": "6.7.1",
+    "eslint-plugin-react-hooks": "4.6.0",
     "shell-quote": "1.7.3",
     "request/form-data": "2.5.4",
     "@plone/scripts/execa": "2.0.0",
