--- a/package.json
+++ b/package.json
@@ -248,6 +248,7 @@
     "volto-subsites": "4.0.0"
   },
   "devDependencies": {
+    "@cypress/code-coverage": "^3.10.0",
     "@plone/scripts": "^3.3.2",
     "@storybook/addon-actions": "^6.3.0",
     "@storybook/addon-controls": "6.3.0",
@@ -261,6 +262,8 @@
     "brotli-webpack-plugin": "1.1.0",
     "bundlewatch": "0.3.3",
     "compression-webpack-plugin": "10.0.0",
+    "cypress": "13.1.0",
+    "cypress-fail-fast": "^5.0.1",
     "eslint-plugin-prettier": "3.1.3",
     "jest-junit": "8.0.0",
     "mrs-developer": "*",
