--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
   "theme": "@eeacms/volto-eea-website-theme",
   "addons": [
     "@eeacms/volto-eea-kitkat",
+    "@eeacms/volto-redirector",
     "@eeacms/volto-editing-progress",
     "@eeacms/volto-workflow-progress",
     "@eeacms/volto-embed",
@@ -181,6 +182,7 @@
     "@eeacms/volto-datahub": "2.0.5",
     "@eeacms/volto-design-tokens": "1.1.1",
     "@eeacms/volto-eea-design-system": "1.40.0",
+    "@eeacms/volto-redirector": "0.2.0",
     "@eeacms/volto-eea-kitkat": "29.0.0",
     "@eeacms/volto-eea-map": "5.0.8",
     "@eeacms/volto-eea-versions": "1.0.1",
@@ -228,6 +230,7 @@
     "@eeacms/volto-design-tokens": "1.1.1",
     "@eeacms/volto-editing-progress": "1.0.0",
     "@eeacms/volto-eea-design-system": "1.40.0",
+    "@eeacms/volto-redirector": "0.2.0",
     "@eeacms/volto-eea-kitkat": "29.0.0",
     "@eeacms/volto-eea-map": "5.0.8",
     "@eeacms/volto-eea-versions": "1.0.1",
