--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "eea-website-frontend",
   "description": "EEA Main Website frontend (Plone 6)",
   "license": "MIT",
-  "version": "2.55.0",
+  "version": "2.56.0",
   "scripts": {
     "start": "razzle start",
     "postinstall": "make omelette && make patches",
@@ -48,6 +48,7 @@
   "theme": "@eeacms/volto-eea-website-theme",
   "addons": [
     "@eeacms/volto-eea-kitkat",
+    "@eeacms/volto-redirector",
     "@eeacms/volto-editing-progress",
     "@eeacms/volto-workflow-progress",
     "@eeacms/volto-embed",
@@ -182,6 +183,7 @@
     "@eeacms/volto-design-tokens": "1.1.1",
     "@eeacms/volto-eea-design-system": "1.40.0",
     "@eeacms/volto-eea-kitkat": "30.0.0",
+    "@eeacms/volto-redirector": "0.2.0",
     "@eeacms/volto-eea-map": "5.0.8",
     "@eeacms/volto-eea-versions": "1.0.1",
     "@eeacms/volto-eea-website-policy": "2.8.0",
@@ -228,6 +230,7 @@
     "@eeacms/volto-editing-progress": "1.0.0",
     "@eeacms/volto-eea-design-system": "1.40.0",
     "@eeacms/volto-eea-kitkat": "30.0.0",
+    "@eeacms/volto-redirector": "0.2.0",
     "@eeacms/volto-eea-map": "5.0.8",
     "@eeacms/volto-eea-versions": "1.0.1",
     "@eeacms/volto-eea-website-policy": "2.8.0",
