--- a/package.json
+++ b/package.json
@@ -201,6 +201,7 @@
     "@plone-collective/volto-rss-provider": "1.0.1",
     "@eeacms/volto-description-block": "2.2.3",
     "@eeacms/volto-flourish": "0.1.6",
+    "@eeacms/volto-chatbot": "1.0.3",
     "volto-subsites": "4.0.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
@@ -214,8 +215,7 @@
     "@plone/scripts/execa": "2.0.0",
     "sane/execa": "2.0.0",
     "react-dev-utils": "^12",
-    "webpack-bundle-analyzer": "4.9.1",
-    "@plone-collective/volto-sentry": "0.4.0"
+    "webpack-bundle-analyzer": "4.9.1"
   },
   "resolutions-comments": {
     "react-dev-utils": "Fixes the security vulnerabilities in packages used by react-dev-utils",
