--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "eea-website-frontend",
   "description": "EEA Main Website frontend (Plone 6)",
   "license": "MIT",
-  "version": "3.1.0",
+  "version": "3.1.1",
   "scripts": {
     "start": "razzle start",
     "postinstall": "make omelette && make patches",
@@ -175,6 +175,7 @@
   },
   "resolutions": {
     "@elastic/search-ui": "1.21.2",
+    "@eeacms/volto-accordion-block": "12.0.0",
     "@eeacms/volto-embed": "10.1.4",
     "@eeacms/volto-embed-content": "0.2.2",
     "@eeacms/volto-embed-static-content": "0.5.1",
@@ -191,7 +192,7 @@
     "@eeacms/volto-globalsearch": "2.1.2",
     "@eeacms/volto-plotlycharts": "13.3.7",
     "@eeacms/volto-redmine-helpdesk": "1.0.0",
-    "@eeacms/volto-searchlib": "3.0.0",
+    "@eeacms/volto-searchlib": "^2.1.10",
     "@eeacms/volto-tableau": "8.1.5",
     "@eeacms/volto-workflow-progress": "5.0.1",
     "@eeacms/volto-block-data-figure": "8.2.1",
@@ -243,7 +244,7 @@
     "@eeacms/volto-plotlycharts": "13.3.7",
     "@eeacms/volto-redirector": "0.3.0",
     "@eeacms/volto-redmine-helpdesk": "1.0.0",
-    "@eeacms/volto-searchlib": "3.0.0",
+    "@eeacms/volto-searchlib": "^2.1.10",
     "@eeacms/volto-tableau": "8.1.5",
     "@eeacms/volto-workflow-progress": "5.0.1",
     "@plone-collective/volto-authomatic": "2.0.1",
