--- a/package.json
+++ b/package.json
@@ -192,7 +192,7 @@
     "@eeacms/volto-globalsearch": "2.1.2",
     "@eeacms/volto-plotlycharts": "13.3.7",
     "@eeacms/volto-redmine-helpdesk": "1.0.0",
-    "@eeacms/volto-searchlib": "^2.1.10",
+    "@eeacms/volto-searchlib": "3.0.0",
     "@eeacms/volto-tableau": "8.1.5",
     "@eeacms/volto-workflow-progress": "5.0.1",
     "@eeacms/volto-block-data-figure": "8.2.1",
@@ -244,7 +244,7 @@
     "@eeacms/volto-plotlycharts": "13.3.7",
     "@eeacms/volto-redirector": "0.3.0",
     "@eeacms/volto-redmine-helpdesk": "1.0.0",
-    "@eeacms/volto-searchlib": "^2.1.10",
+    "@eeacms/volto-searchlib": "3.0.0",
     "@eeacms/volto-tableau": "8.1.5",
     "@eeacms/volto-workflow-progress": "5.0.1",
     "@plone-collective/volto-authomatic": "2.0.1",
