--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "eea-website-frontend",
   "description": "EEA Main Website frontend (Plone 6)",
   "license": "MIT",
-  "version": "3.2.1-beta.4",
+  "version": "3.2.1-beta.5",
   "scripts": {
     "start": "razzle start",
     "postinstall": "make omelette && make patches",
@@ -48,6 +48,7 @@
   "theme": "@eeacms/volto-eea-website-theme",
   "addons": [
     "@eeacms/volto-eea-kitkat",
+    "@eeacms/volto-eea-chatbot",
     "@eeacms/volto-redirector",
     "@eeacms/volto-editing-progress",
     "@eeacms/volto-workflow-progress",
@@ -192,7 +193,7 @@
     "@eeacms/volto-globalsearch": "3.0.0",
     "@eeacms/volto-plotlycharts": "13.3.7",
     "@eeacms/volto-redmine-helpdesk": "1.0.0",
-    "@eeacms/volto-searchlib": "3.0.2",
+    "@eeacms/volto-searchlib": "3.0.3",
     "@eeacms/volto-tableau": "8.1.5",
     "@eeacms/volto-workflow-progress": "5.0.1",
     "@eeacms/volto-block-data-figure": "8.2.1",
@@ -202,7 +203,7 @@
     "@plone-collective/volto-rss-provider": "1.0.1",
     "@eeacms/volto-description-block": "2.2.3",
     "@eeacms/volto-flourish": "0.1.6",
-    "@eeacms/volto-chatbot": "1.0.8",
+    "@eeacms/volto-chatbot": "0.6.2",
     "volto-subsites": "4.0.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
@@ -230,6 +231,7 @@
     "@eeacms/volto-description-block": "2.2.3",
     "@eeacms/volto-design-tokens": "1.1.1",
     "@eeacms/volto-editing-progress": "1.0.0",
+    "@eeacms/volto-eea-chatbot": "1.0.10",
     "@eeacms/volto-eea-design-system": "1.40.2",
     "@eeacms/volto-eea-kitkat": "30.1.0",
     "@eeacms/volto-eea-map": "5.0.8",
