--- a/package.json
+++ b/package.json
@@ -67,6 +67,8 @@
     "@eeacms/volto-eea-design-system",
     "@eeacms/volto-eea-website-theme",
     "@eeacms/volto-eea-website-policy",
+    "@eeacms/volto-chatbot",
+    "@eeacms/volto-eea-chatbot",
     "@plone-collective/volto-authomatic",
     "@eeacms/volto-citation",
     "@eeacms/volto-flourish",
@@ -198,6 +200,8 @@
     "@eeacms/volto-block-data-figure": "8.2.1",
     "@eeacms/volto-editing-progress": "2.0.0",
     "@eeacms/volto-citation": "1.1.0",
+    "@eeacms/volto-chatbot": "0.6.4",
+    "@eeacms/volto-eea-chatbot": "1.0.11",
     "@plone-collective/volto-authomatic": "2.0.1",
     "@plone-collective/volto-rss-provider": "1.0.1",
     "@eeacms/volto-description-block": "2.2.3",
@@ -245,6 +249,8 @@
     "@eeacms/volto-redmine-helpdesk": "1.0.0",
     "@eeacms/volto-searchlib": "^2.1.10",
     "@eeacms/volto-tableau": "8.1.5",
+    "@eeacms/volto-chatbot": "0.6.4",
+    "@eeacms/volto-eea-chatbot": "1.0.11",
     "@eeacms/volto-workflow-progress": "5.0.1",
     "@plone-collective/volto-authomatic": "2.0.1",
     "@plone-collective/volto-rss-provider": "1.0.1",
