feat: volto-searchlib 3.0.3

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "eea-website-frontend",
   "description": "EEA Main Website frontend (Plone 6)",
   "license": "MIT",
-  "version": "4.0.0",
+  "version": "4.1.0",
   "scripts": {
     "start": "razzle start",
     "postinstall": "make omelette && make patches",
@@ -194,7 +194,7 @@
     "@eeacms/volto-globalsearch": "3.0.0",
     "@eeacms/volto-plotlycharts": "13.3.7",
     "@eeacms/volto-redmine-helpdesk": "1.0.0",
-    "@eeacms/volto-searchlib": "^2.1.10",
+    "@eeacms/volto-searchlib": "3.0.3",
     "@eeacms/volto-tableau": "8.1.5",
     "@eeacms/volto-workflow-progress": "5.0.1",
     "@eeacms/volto-block-data-figure": "8.2.1",
@@ -249,7 +249,7 @@
     "@eeacms/volto-plotlycharts": "13.3.7",
     "@eeacms/volto-redirector": "0.3.0",
     "@eeacms/volto-redmine-helpdesk": "1.0.0",
-    "@eeacms/volto-searchlib": "^2.1.10",
+    "@eeacms/volto-searchlib": "3.0.3",
     "@eeacms/volto-tableau": "8.1.5",
     "@eeacms/volto-workflow-progress": "5.0.1",
     "@plone-collective/volto-authomatic": "2.0.1",
