chore: Add volto-eea-chatbot to dev environment

--- a/jsconfig.json
+++ b/jsconfig.json
@@ -217,6 +217,9 @@
             ],
             "@eeacms/volto-redirector": [
                 "addons/volto-redirector/src"
+            ],
+            "@eeacms/volto-eea-chatbot": [
+                "addons/volto-eea-chatbot/src"
             ]
         },
         "baseUrl": "src"
